text color contrast issue in p on some child pages of our-work

--- a/assets/scss/palette-blue-azure.scss
+++ b/assets/scss/palette-blue-azure.scss
@@ -7,6 +7,10 @@
 		background-color: $dark-blue;
 	}
 
+	p {
+		color:scale-color($primary-color, $lightness:-40%)!important;
+	}
+
 	a,
 	h3,
 	.title,
